<resources>
    <string name="app_name">Top Manga</string>
    <string name="profile">Profile</string>

    <string name="dummy_title">Berserk</string>
    <string name="dummy_desc">
        Guts, a former mercenary now known as the \"Black Swordsman,\" is out for revenge. After a tumultuous childhood, he finally finds someone he respects and believes he can trust, only to have everything fall apart when this person takes away everything important to Guts for the purpose of fulfilling his own desires. Now marked for death, Guts becomes condemned to a fate in which he is relentlessly pursued by demonic beings.\n
                Setting out on a dreadful quest riddled with misfortune, Guts, armed with a massive sword and monstrous strength, will let nothing stop him, not even death itself, until he is finally able to take the head of the one who stripped him—and his loved one—of their humanity.
    </string>
    <string name="genre">Genre</string>
    <string name="author">Author</string>
    <string name="synopsys">Synopsys</string>
    <string name="characters">Characters</string>
    <string name="source_by_myanimelist_net">Source by Myanimelist.net</string>
    <string name="rank">Rank %1$s</string>
</resources>