<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.DetailMangaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:id="@+id/imgBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/llMain"
            android:scaleType="fitXY"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/imgBackground"
            app:layout_constraintBottom_toBottomOf="@id/imgBackground"
            android:background="#59000000"/>
        <ImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:id="@+id/imgMain"
            app:layout_constraintTop_toTopOf="@id/imgBackground"
            app:layout_constraintEnd_toEndOf="@id/imgBackground"
            app:layout_constraintStart_toStartOf="@id/imgBackground"
            app:layout_constraintBottom_toBottomOf="@id/imgBackground"/>

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_circle_black_transparent"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="@id/imgBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_radius_top_white"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/imgMain"
            tools:layout_editor_absoluteX="144dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                tools:text="@string/dummy_title"
                style="@style/TextTitle.VeryBig"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/actionShare"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/actionShare"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/baseline_share_24"
                app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                app:layout_constraintTop_toTopOf="@id/txtTitle"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/txtRank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_blue"
                tools:text="Rank #1"
                style="@style/TextTitle.Medium"
                app:layout_constraintBottom_toBottomOf="@id/txtRating"
                app:layout_constraintEnd_toStartOf="@id/txtRating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtRating" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_radius_yellow"
                tools:text="9.47"
                style="@style/TextTitle.White.Drawable"
                app:drawableStartCompat="@drawable/baseline_star_24"
                app:layout_constraintEnd_toStartOf="@id/txtPublished"
                app:layout_constraintStart_toEndOf="@id/txtRank"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <TextView
                android:id="@+id/txtPublished"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_green"
                tools:text="1998 "
                style="@style/TextTitle.Medium.Drawable"
                app:drawableStartCompat="@drawable/baseline_edit_calendar_24"
                app:layout_constraintBottom_toBottomOf="@id/txtRating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtRating"
                app:layout_constraintTop_toTopOf="@id/txtRating" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtRating" />

            <LinearLayout
                android:id="@+id/llGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_radius_grey"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    style="@style/TextTitle.Small"
                    app:layout_constraintTop_toTopOf="@id/view" />

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:lines="3"
                    android:maxLines="3"
                    tools:text="Action, Adventure, Award Winning"
                    style="@style/TextSubtitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_radius_grey"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintTop_toTopOf="@+id/view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    style="@style/TextTitle.Small"
                    app:layout_constraintTop_toTopOf="@id/view" />

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:lines="3"
                    tools:text=" Inoue, Takehiko"
                    style="@style/TextSubtitle"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSynopsys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_grey"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llGenres">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsys"
                    style="@style/TextTitle.Small"
                    app:layout_constraintTop_toTopOf="@id/view" />

                <TextView
                    android:id="@+id/txtSynopsys"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="@string/dummy_desc"
                    style="@style/TextSubtitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtLblCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/characters"
                style="@style/TextTitle.Small"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/llSynopsys" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvCharacter"
                app:layout_constraintTop_toBottomOf="@id/txtLblCharacter"
                android:layout_marginTop="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_by_myanimelist_net"
            android:gravity="center_horizontal"
            android:background="@color/blue"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/llMain" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>